# football-analytics-pipeline

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-airflow.txt  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
configs/: config.yaml  country_iso.yaml  dq_rules.yaml  position_taxonomy.yaml  sources.yaml
dags/: football_pipeline.py
data/sample/: appearances.csv  clubs.csv  competitions.csv  games.csv  players.csv
docs/adr/: 0000-using-adrs.md  0001-audit-table-design.md  0002-source-registry.md  0003-bronze-storage-and-partitioning.md  0004-silver-transformations.md  0005-scd2-implementation.md  0006-dq-framework.md  0007-gold-storage-and-analytics.md  0008-cross-batch-semantics.md  0009-spark-engine-scope-and-stub.md  0010-airflow-orchestration.md  0011-docker-deployment.md  0012-pii-tokenisation.md  0013-bi-visualisation-scope.md
notebooks/: gold_exploration.ipynb
scripts/: build_notebook.py  generate_samples.py  seed_kaggle.py
src/bronze/: resolver.py  run.py  writer.py
src/dq/: __init__.py  quarantine.py  report.py  rules.py  runner.py
src/engines/: base.py  factory.py  pandas_engine.py  spark_engine.py
src/gold/: __init__.py  artifacts.py  builders.py  duckdb_session.py  run.py
src/ingestion/: file_loader.py  manifest.py  registry.py
src/metadata/: audit.py  db.py  dq_results.py  runs.py  watermarks.py
src/orchestration/: airflow_wrappers.py
tests/: conftest.py  test_airflow_dag.py  test_airflow_wrappers.py  test_audit.py  test_bronze.py  test_bronze_resolver.py  test_checksums.py  test_dimensions.py  test_dq_report.py  test_dq_rules.py  test_dq_runner.py  test_engines.py  test_facts.py  test_file_loader.py  test_gold_artifacts.py  test_gold_duckdb.py  test_gold_run.py  test_manifest.py  test_pii.py  test_registry.py  test_samples.py  test_scd2.py  test_scd2_day2.py  test_silver_run.py  test_silver_run_day2.py  test_silver_transforms.py  test_spark_engine_stub.py
(+15 files in other folders)
